<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">

    <TextView
        android:id="@+id/text_view_meal_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_view_Meal_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_meal_type">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_meal_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/chip_main_course"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_main_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_side_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_appetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_beverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_souce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/souce" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_marinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fingerfood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_view_diet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_Meal_type" />

    <HorizontalScrollView
        android:id="@+id/scroll_view_diet_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_diet_type">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_diet_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/chip_gluten_free"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_gluten_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ketogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_lacto_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lacto_vegetarian" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ovo_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ovo_vegetarian" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_paleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_primal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_whole30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30" />


            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_diet_type" />

</androidx.constraintlayout.widget.ConstraintLayout>