<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverviewFragment">

    <ImageView
        android:id="@+id/image_view_recipe_detail"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_recipe_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_view_recipe_detail"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_recipe_detail"
        app:layout_constraintEnd_toEndOf="@+id/image_view_recipe_detail" />

    <ImageView
        android:id="@+id/image_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_view_time"
        app:layout_constraintEnd_toEndOf="@+id/text_view_time"
        app:layout_constraintStart_toStartOf="@+id/text_view_time"
        app:srcCompat="@drawable/ic_time"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_view_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_time"
        app:layout_constraintEnd_toStartOf="@+id/text_view_time" />

    <ImageView
        android:id="@+id/image_view_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_view_like"
        app:layout_constraintEnd_toEndOf="@+id/text_view_like"
        app:layout_constraintStart_toStartOf="@+id/text_view_like"
        app:srcCompat="@drawable/ic_heart"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@string/lacto_vegetarian"
        android:text="@string/title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_recipe_detail" />

    <ImageView
        android:id="@+id/image_view_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/text_view_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title"
        app:srcCompat="@drawable/ic_checkmark"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_vegetarian"
        app:layout_constraintStart_toEndOf="@+id/image_view_vegetarian"
        app:layout_constraintTop_toTopOf="@+id/image_view_vegetarian" />

    <ImageView
        android:id="@+id/image_view_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/image_view_vegetarian"
        app:layout_constraintTop_toBottomOf="@+id/image_view_vegetarian"
        app:srcCompat="@drawable/ic_checkmark"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_vegan"
        app:layout_constraintStart_toEndOf="@+id/image_view_vegan"
        app:layout_constraintTop_toTopOf="@+id/image_view_vegan" />

    <ImageView
        android:id="@+id/image_view_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_vegetarian"
        app:layout_constraintStart_toEndOf="@+id/text_view_vegetarian"
        app:layout_constraintTop_toTopOf="@+id/text_view_vegetarian"
        app:srcCompat="@drawable/ic_checkmark"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_gluten_free"
        app:layout_constraintStart_toEndOf="@+id/image_view_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/image_view_gluten_free"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/image_view_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/image_view_gluten_free"
        app:layout_constraintTop_toBottomOf="@+id/image_view_gluten_free"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_dairy_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_dairy_free"
        app:layout_constraintStart_toEndOf="@+id/image_view_dairy_free"
        app:layout_constraintTop_toTopOf="@+id/image_view_dairy_free" />

    <ImageView
        android:id="@+id/image_view_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@+id/text_view_gluten_free"
        app:layout_constraintTop_toTopOf="@+id/image_view_gluten_free"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_healthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_healthy"
        app:layout_constraintStart_toEndOf="@+id/image_view_healthy"
        app:layout_constraintTop_toTopOf="@+id/image_view_healthy" />

    <ImageView
        android:id="@+id/image_view_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/image_view_healthy"
        app:layout_constraintTop_toBottomOf="@+id/image_view_healthy"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/text_view_cheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_cheap"
        app:layout_constraintStart_toEndOf="@+id/image_view_cheap"
        app:layout_constraintTop_toTopOf="@+id/image_view_cheap" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_vegan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>